--- a/control.html
+++ b/control.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="/control_functions.js"></script>
     </head>
     <body>
-        <div id="header" class="control"><span id="title">Control</span></div>
+        <div id="header" class="control"><h1 id="title">Control</h1></div>
 		<div id="main" class="control">
             <h2>PROJECTION</h2>
             <ul id="tcp-clients"></ul>
