ui improvements of control page

--- a/control.html
+++ b/control.html
@@ -8,11 +8,11 @@
     <script type="text/javascript" src="/control_functions.js"></script>
     </head>
     <body>
-        <div id="header" class="control"><h1 id="title">Control</h1></div>
 		<div id="main" class="control">
-            <h2>PROJECTION</h2>
+            <h1 id="title">Crawling Traces Control Room</h1>
+            <h2>PROJECTION  <span class="projections-num"></span></h2>
             <ul id="tcp-clients"></ul>
-            <h2>PARTICIPANTS</h2>
+            <h2>PARTICIPANTS <span class="participants-num"></span></h2>
             <ul id="web-clients"></ul>
         </div>
     </body>
