updated control view, can now show mapping

--- a/control.html
+++ b/control.html
@@ -15,5 +15,9 @@
             <h2>PARTICIPANTS <span class="participants-num"></span></h2>
             <ul id="web-clients"></ul>
         </div>
+        <div id="mapping">
+            <h1>Mapping</h1>
+            <canvas id="canvas" width="150" height="150"></canvas>
+        </div>
     </body>
 </html>
