--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 		<div id="main" class="action"><div id="help"><table><tr><td><b>Zeichnen</b></td><td>Gerade Linien mit dem Finger ziehen.</td></tr><tr><td><b>Farbe</b></td><td>Oben rechts: Aktuelle Zeichenfarbe.<br />Oben links: Neue Farbe aktivieren.</td></tr><tr><td><b>Position</b></td><td>Zur Orientierung Kreis rechts oben drücken.</td></tr></table></div></div>
 		<div id="header"><button id="newcolor"></button><!--<div id="title">R&amp;OM</div>--><button id="locate"></button></div>
 		<div id="line"></div>
-        <div class="msg"></div>
+        <div class="dimmer dimmer-msg"><div class="msg"></div></div>
     </body>
 </html>
