--- a/control.html
+++ b/control.html
@@ -5,7 +5,7 @@
     <link type="text/css" href="style.css" rel="StyleSheet">
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/lib/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="/lib/jsgl.min.js"></script>
+    <script type="text/javascript" src="/lib/svg.min.js"></script>
     <script type="text/javascript" src="/control_functions.js"></script>
     </head>
     <body>
