--- a/control.html
+++ b/control.html
@@ -8,20 +8,30 @@
     <script type="text/javascript" src="/lib/svg.min.js"></script>
     <script type="text/javascript" src="/lib/ustream-embedapi.js"></script>
     <script type="text/javascript" src="/control_functions.js"></script>
+    <title>Malst du die Wand an?!</title>
     </head>
     <body>
 		<div id="main" class="control">
             <div id="information">
-                <h1 id="title">Crawling Traces - Paint Our Wall</h1>
-                <p>Participants: <span class="participants-num"></span> | Viewers: <span class="viewers-num"></span></p>
+                <!--<h1 id="title">Crawling Traces - Paint Our Wall</h1>-->
+                <h1 id="title">Malst du die Wand an?!</h1>
+                <!--<p>Participants: <span class="participants-num"></span> | Viewers: <span class="viewers-num"></span></p>-->
+                <p>Zeichner: <span class="participants-num"></span> | Zuschauer: <span class="viewers-num"></
             </div><!-- #information -->
             <div id="additional">
                 <div id="explanation">
+                <!--
                     <h2>HOW TO</h2>
                     <p class="important">Grab your smartphone and open this URL: <a href="frauzufall.de/wand" target="_blank">frauzufall.de/wand</a>.</p>
                     <p class="important">You can now draw an our wall by wiping the screen of your smartphone. You will see drawing lines as a projection on our wall in the video stream. </p>
                     <p>There can be a time delay up to one minute. This is why you will also see digital lines as a preview of what you and other participants are drawing.</p>
                     <p>No information about your connection will be stored, you can draw completely anonymous. You can also open multiple tabs or reload the page on your phone to draw another line in a different color.</p>
+                    -->
+                    <h2>Anleitung</h2>
+                    <p class="important">Schnapp dir dein Smartphone und öffne diese Seite mit dem Browser: <a href="frauzufall.de/wand" target="_blank">frauzufall.de/wand</a>.</p>
+                    <p class="important">Links neben dieser Erklärung erscheint auf dem Videostream ein farbiger Punkt. Du kannst ihn steuern, indem du über dein Handy-Display wischst und so unsere Wand bemalen.</p>
+                    <p>Der Stream hängt zeitlich etwas nach, deswegen erscheint die projizierte Linie im Stream mit Verzögerung. Deswegen siehst du eine digitale Linie als Vorschau davon, was du zeichnest.</p>
+                    <p>Es werden keine Verbindungsdaten gespeichert, du zeichnest also komplett anonym. Du kannst auch mehrere Tabs öffnen oder die Seite neu laden, um eine weitere Linie in einer anderen Farbe zu steuern.</p>
                 </div>
             </div><!-- #help -->
             <div id="mapping">
