--- a/control.html
+++ b/control.html
@@ -16,7 +16,7 @@
                 <!--<h1 id="title">Crawling Traces - Paint Our Wall</h1>-->
                 <h1 id="title">Malst du die Wand an?!</h1>
                 <!--<p>Participants: <span class="participants-num"></span> | Viewers: <span class="viewers-num"></span></p>-->
-                <p>Zeichner: <span class="participants-num"></span> | Zuschauer: <span class="viewers-num"></
+                <p>Zeichner: <span class="participants-num"></span> | Zuschauer: <span class="viewers-num"></span></p>
             </div><!-- #information -->
             <div id="additional">
                 <div id="explanation">
