--- a/control.html
+++ b/control.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="/lib/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="/lib/svg.min.js"></script>
         <script type="text/javascript" src="/lib/ustream-embedapi.js"></script>
+        <script type="text/javascript" src="/lib/json2.js"></script>
         <script type="text/javascript" src="/control_functions.js"></script>
         <title>Malst du die Wand an?!</title>
     </head>
@@ -28,10 +29,10 @@
                     <p>No information about your connection will be stored, you can draw completely anonymous. You can also open multiple tabs or reload the page on your phone to draw another line in a different color.</p>
                     -->
                     <h2>Anleitung</h2>
-                    <p class="important">Schnapp dir dein Smartphone und öffne diese Seite mit dem Browser: <a href="frauzufall.de/wand" target="_blank">frauzufall.de/wand</a>.</p>
+                    <p class="important">Schnapp dir dein Smartphone und öffne diese Seite mit dem Browser: <a href="http://frauzufall.de/wand" target="_blank">http://frauzufall.de/wand</a>.</p>
                     <p class="important">Links neben dieser Erklärung erscheint auf dem Videostream ein farbiger Punkt. Du kannst ihn steuern, indem du über dein Handy-Display wischst und so unsere Wand bemalen.</p>
                     <p>Der Stream hängt zeitlich etwas nach, deswegen erscheint die projizierte Linie im Stream mit Verzögerung. Deswegen siehst du eine digitale Linie als Vorschau davon, was du zeichnest.</p>
-                    <p>Es werden keine Verbindungsdaten gespeichert, du zeichnest also komplett anonym. Du kannst auch mehrere Tabs öffnen oder die Seite neu laden, um eine weitere Linie in einer anderen Farbe zu steuern.</p>
+                    <!--<p>Es werden keine Verbindungsdaten gespeichert, du zeichnest also komplett anonym. Du kannst auch mehrere Tabs öffnen oder die Seite neu laden, um eine weitere Linie in einer anderen Farbe zu steuern.</p>-->
                 </div>
             </div><!-- #help -->
             <div id="mapping">
