--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link type="text/css" href="style.css" rel="StyleSheet">
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/lib/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="/lib/json2.js"></script>
     <script type="text/javascript" src="/client_functions.js"></script>
     </head>
     <body>
