--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="/client_functions.js"></script>
     <script type="text/javascript" src="lib/cssQuery-p.js"></script>
     <script type="text/javascript" src="lib/jcoglan.com/sylvester.js"></script>
-    <script type="text/javascript" src="lib/js/cssSandpaper.js"></script>
+    <script type="text/javascript" src="lib/cssSandpaper.js"></script>
     </head>
     <body>
 		<div id="main" class="action"><div id="help"><table><tr><td><b>Zeichnen</b></td><td>Gerade Linien mit dem Finger ziehen.</td></tr><tr><td><b>Farbe</b></td><td>Oben rechts: Aktuelle Zeichenfarbe.<br />Oben links: Neue Farbe aktivieren.</td></tr><tr><td><b>Position</b></td><td>Zur Orientierung Kreis rechts oben drücken.</td></tr></table></div></div>
