--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="/client_functions.js"></script>
     <script type="text/javascript" src="lib/cssQuery-p.js"></script>
     <script type="text/javascript" src="lib/jcoglan.com/sylvester.js"></script>
+    <script type="text/javascript" src="lib/EventHelpers.js"></script>
     <script type="text/javascript" src="lib/cssSandpaper.js"></script>
     </head>
     <body>
