updated helper text, text stays visible for 20 drawing lines

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="lib/cssSandpaper.js"></script>-->
     </head>
     <body>
-		<div id="main" class="action"><div id="help"><table><tr><td><b>Zeichnen</b></td><td>Gerade Linien mit dem Finger ziehen.</td></tr><tr><td><b>Farbe</b></td><td>Oben rechts: Aktuelle Zeichenfarbe.<br />Oben links: Neue Farbe aktivieren.</td></tr><tr><td><b>Position</b></td><td>Zur Orientierung Kreis rechts oben drücken.</td></tr></table></div></div>
+		<div id="main" class="action"><div id="help"><table><tr><td><b>Zeichnen</b></td><td>Durch Wischen über den Bildschirm gerade Linien malen.</td></tr><tr><td><b>Farbe</b></td><td>Oben rechts: Aktuelle Zeichenfarbe.<br />Oben links: Neue Farbe aktivieren.</td></tr><tr><td><b>Position</b></td><td>Zur Orientierung Kreis rechts oben drücken.</td></tr></table></div></div>
 		<div id="header"><button id="newcolor"></button><!--<div id="title">R&amp;OM</div>--><button id="locate"></button></div>
 		<div id="line"></div>
         <div class="dimmer dimmer-msg"><div class="msg"></div></div>
