--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="/lib/json2.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/lib/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="/lib/opentype.min.js"></script>
     <script type="text/javascript" src="/client_functions.js"></script>
     <!--<script type="text/javascript" src="lib/cssQuery-p.js"></script>
     <script type="text/javascript" src="lib/jcoglan.com/sylvester.js"></script>
@@ -14,7 +15,7 @@
     </head>
     <body>
 		<div id="main" class="action"><div id="help"><table><tr><td><b>Zeichnen</b></td><td>Durch Wischen über den Bildschirm gerade Linien malen.</td></tr><tr><td><b>Farbe</b></td><td>Oben rechts: Aktuelle Zeichenfarbe.<br />Oben links: Neue Farbe aktivieren.</td></tr><tr><td><b>Position</b></td><td>Zur Orientierung Kreis rechts oben drücken.</td></tr></table></div></div>
-		<div id="header"><button id="newcolor"></button><!--<div id="title">R&amp;OM</div>--><button id="locate"></button></div>
+		<div id="header"><button id="newcolor"></button><button id="drawtext"></button><button id="locate"></button></div>
 		<div id="line"></div>
         <div class="dimmer dimmer-msg"><div class="msg"></div></div>
     </body>
